methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:2: error: not found: value c
def isFacingTrail():Boolean = {avance();c=getCouleurSol();recule(); if (c == Color.green) {return(true);} else {return(false);};
                                        ^SlugTracking:2: error: not found: value c
def isFacingTrail():Boolean = {avance();c=getCouleurSol();recule(); if (c == Color.green) {return(true);} else {return(false);};
                                                                        ^